Fix meta layout on small screens

--- a/public_html/scss/app.scss
+++ b/public_html/scss/app.scss
@@ -255,7 +255,11 @@ body {
 					.meta {
 						display: inline-block;
 						width: 100%;
-						margin: 0 0 0 -1em;
+						margin: 0;
+
+						.username {
+							margin: 0 0 0 -1em;
+						}
 
 						.time {
 							float: right;
